force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/Apttus_Config2__NotificationFeed__c.object-meta.xml
<CustomObject>
    <description>A generic object to contain Notification Feeds generated by any object for any page</description>
    <label>Notification Feed</label>
    <nameField>
        <displayFormat>NF-{000000}</displayFormat>
        <label>Notification Feed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>