force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldName__c</fullName>
    <description>Field Name related to the Notification. E.g. if the notification is about a field update then the Field Name of the field that got update.</description>
    <inlineHelpText>Field Name related to the Notification. E.g. if the notification is about a field update then the Field Name of the field that got update.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>