force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__FieldType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldType__c</fullName>
    <description>Datatype of the field mentioned in the Field Name</description>
    <inlineHelpText>Datatype of the field mentioned in the Field Name</inlineHelpText>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>