force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__FieldValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldValue__c</fullName>
    <description>Value of the field mentioned in the Field Name</description>
    <inlineHelpText>Value of the field mentioned in the Field Name</inlineHelpText>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>