force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__NotificationHeader__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NotificationHeader__c</fullName>
    <description>Header to be displayed for the Notification Message for this Event</description>
    <inlineHelpText>Header to be displayed for the Notification Message for this Event</inlineHelpText>
    <label>NotificationHeader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>