force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__NotificationMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NotificationMessage__c</fullName>
    <description>The message to be displayed in the notification for this Event</description>
    <inlineHelpText>The message to be displayed in the notification for this Event</inlineHelpText>
    <label>NotificationMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>