force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__NotificationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NotificationType__c</fullName>
    <description>Type of the Notification. This may be used to display along with the Notifications or to filter the notifications.</description>
    <inlineHelpText>Type of the Notification. This may be used to display along with the Notifications or to filter the notifications.</inlineHelpText>
    <label>NotificationType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>