force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__RelatedObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedObjectName__c</fullName>
    <description>Name of the related Object from/for which this notification message is generated</description>
    <inlineHelpText>Name of the related Object from/for which this notification message is generated</inlineHelpText>
    <label>Related Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>