force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/fields/Apttus_Config2__RelatedRecordIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedRecordIds__c</fullName>
    <description>Record Ids of the related records from the Related Object for/from which this notification message is generated</description>
    <inlineHelpText>Record Ids of the related records from the Related Object for/from which this notification message is generated</inlineHelpText>
    <label>Related Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>