force-app/main/default/objects/Apttus_Config2__NotificationFeed__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__NotificationHeader__c</columns>
    <columns>Apttus_Config2__NotificationMessage__c</columns>
    <columns>Apttus_Config2__NotificationType__c</columns>
    <columns>Apttus_Config2__RelatedObjectName__c</columns>
    <columns>Apttus_Config2__RelatedRecordIds__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>